[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://image.jpg" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 26
font_data = ExtResource( 1 )

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="Center" type="CenterContainer" parent="Canvas"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="Canvas/Center"]
margin_left = 40.0
margin_top = 163.0
margin_right = 680.0
margin_bottom = 1116.0
custom_constants/separation = 32

[node name="Image" type="TextureRect" parent="Canvas/Center/VBox"]
margin_right = 640.0
margin_bottom = 427.0
texture = ExtResource( 3 )

[node name="Title" type="VBoxContainer" parent="Canvas/Center/VBox"]
margin_top = 459.0
margin_right = 640.0
margin_bottom = 509.0

[node name="Label" type="Label" parent="Canvas/Center/VBox/Title"]
margin_right = 640.0
margin_bottom = 14.0
text = "Title"

[node name="TextEdit" type="TextEdit" parent="Canvas/Center/VBox/Title"]
margin_top = 18.0
margin_right = 640.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 32 )
text = "Hello world"

[node name="Subject" type="VBoxContainer" parent="Canvas/Center/VBox"]
margin_top = 541.0
margin_right = 640.0
margin_bottom = 591.0

[node name="Label" type="Label" parent="Canvas/Center/VBox/Subject"]
margin_right = 640.0
margin_bottom = 14.0
text = "Subject"

[node name="TextEdit" type="TextEdit" parent="Canvas/Center/VBox/Subject"]
margin_top = 18.0
margin_right = 640.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 32 )
text = "Godot Share Plugin"

[node name="Content" type="VBoxContainer" parent="Canvas/Center/VBox"]
margin_top = 623.0
margin_right = 640.0
margin_bottom = 673.0

[node name="Label" type="Label" parent="Canvas/Center/VBox/Content"]
margin_right = 640.0
margin_bottom = 14.0
text = "Content"

[node name="TextEdit" type="TextEdit" parent="Canvas/Center/VBox/Content"]
margin_top = 18.0
margin_right = 640.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 32 )
text = "I'm blue Da ba dee da ba di"

[node name="ShareTextBtn" type="Button" parent="Canvas/Center/VBox"]
margin_top = 705.0
margin_right = 640.0
margin_bottom = 743.0
custom_fonts/font = SubResource( 1 )
text = "Share Text"

[node name="ShareImageBtn" type="Button" parent="Canvas/Center/VBox"]
margin_top = 775.0
margin_right = 640.0
margin_bottom = 813.0
custom_fonts/font = SubResource( 1 )
text = "Share Image"

[node name="ShareCapturedScreenBtn" type="Button" parent="Canvas/Center/VBox"]
margin_top = 845.0
margin_right = 640.0
margin_bottom = 883.0
custom_fonts/font = SubResource( 1 )
text = "Share Captured Screen"

[node name="SaveImageToGalleryBtn" type="Button" parent="Canvas/Center/VBox"]
margin_top = 915.0
margin_right = 640.0
margin_bottom = 953.0
custom_fonts/font = SubResource( 1 )
text = "Save Image To Gallery"

[connection signal="pressed" from="Canvas/Center/VBox/ShareTextBtn" to="." method="_on_ShareTextBtn_pressed"]
[connection signal="pressed" from="Canvas/Center/VBox/ShareImageBtn" to="." method="_on_ShareImageBtn_pressed"]
[connection signal="pressed" from="Canvas/Center/VBox/ShareCapturedScreenBtn" to="." method="_on_ShareCapturedScreenBtn_pressed"]
[connection signal="pressed" from="Canvas/Center/VBox/SaveImageToGalleryBtn" to="." method="_on_SaveImageToGalleryBtn_pressed"]
